fix shifting of circle in toggle component when browser window rescaling occurs

--- a/src/components/toggle/toggle.scss
+++ b/src/components/toggle/toggle.scss
@@ -30,7 +30,7 @@
       content: '';
 
       display: inline-block;
-      position: relative;
+      position: absolute;
       top: 3px; left: 3px;
 
       @include size(12px, 12px);
@@ -39,13 +39,15 @@
 
       transition: {
         duration: .2s;
-        property: transform;
+        property: left;
         timing-function: linear;
       }
     }
 
+    // probably this way to animate may badly affect performance, 
+    // so it should be reconsidered in future.
     &:checked::after {
-      transform: translateX(20px);
+      left: 23px;
       background: $primary_gradient;
     }
 
